# ex40

./: pyproject.toml
.github/workflows/: lint.yml
src/ex40/: __init__.py  code.py
